[project]
name = "public_invest_api"
version = "1.3.5"
description = "Unofficial Public.com Invest API written in Python Requests"
readme = "README.md"
authors = [
  { name = "Nelson Dane" }
]
urls = { "Homepage" = "https://github.com/NelsonDane/public-invest-api" }

requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.23.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.32.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
preview = true
select = ["ALL"]
ignore = [
    "CPY001", # Ignore license header checks
    "D100", # Ignore missing doc strings in modules
    "D101", # Ignore missing doc strings in classes
    "D104", # Ignore undocumented __init__ files
    "TRY002", # Ignore make own exceptions
    "TRY003", # Allow long messages
    "EM101", # Allow string literals
    "EM102", # Allow f-strings"
]
extend-exclude = ["generated_models"]

[tool.pyright]
exclude = ["generated_models"]
