[project]
name = "public_invest_api"
version = "1.3.5"
description = "Unofficial Public.com Invest API written in Python Requests"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
  { name = "Nelson Dane" }
]
urls = { "Homepage" = "https://github.com/NelsonDane/public-invest-api" }

# Dependencies
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.23.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.35.0",
    "mypy>=1.14.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.13.2",
    "types-requests>=2.32.0.20241016",
]


# Building
[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["public_invest_api"]
include-package-data = true

[tool.setuptools.package-data]
"public_invest_api" = ["models/*.pyi", "models/*.py"]


# Linting and Style
[tool.ruff]
target-version = "py310"
extend = "./styles/ruff.toml"

[tool.mypy]
exclude = "test*"
